--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "ts.webpack.unit.test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "bulid": "webpack",
-    "test": "karma start karma.unit.js",
-    "coverage": "karma start karma.coverage.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/jasmine": "^2.6.3",
-    "@types/node": "^8.0.51",
-    "awesome-typescript-loader": "^3.3.0",
-    "chai": "^4.1.2",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-typescript": "^3.0.8",
-    "karma-webpack": "^2.0.6",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {
-    "jquery": "^3.2.1"
-  }
+    "name": "ts.webpack.unit.test",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "bulid": "webpack",
+        "test": "karma start karma.unit.js",
+        "coverage": "karma start karma.coverage.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/chai": "^4.0.4",
+        "@types/mocha": "^2.2.44",
+        "@types/sinon": "^4.0.0",
+        "awesome-typescript-loader": "^3.3.0",
+        "chai": "^4.1.2",
+        "istanbul-instrumenter-loader": "^3.0.0",
+        "karma": "^1.7.1",
+        "karma-chai": "^0.1.0",
+        "karma-coverage-istanbul-reporter": "^1.3.0",
+        "karma-mocha": "^1.3.0",
+        "karma-mocha-reporter": "^2.2.5",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-sinon": "^1.0.5",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^2.0.6",
+        "mocha": "^4.0.1",
+        "phantomjs-prebuilt": "^2.1.16",
+        "sinon": "^4.1.2",
+        "typescript": "^2.6.1",
+        "webpack": "^3.8.1"
+    },
+    "dependencies": {
+        "jquery": "^3.2.1"
+    }
 }
