--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "bulid": "webpack",
+        "dev": "webpack",
+        "start": "webpack-dev-server",
         "test": "karma start karma.unit.js",
         "coverage": "karma start karma.coverage.js"
     },
@@ -13,10 +14,16 @@
     "license": "ISC",
     "devDependencies": {
         "@types/chai": "^4.0.4",
+        "@types/jquery": "^3.2.16",
         "@types/mocha": "^2.2.44",
         "@types/sinon": "^4.0.0",
         "awesome-typescript-loader": "^3.3.0",
         "chai": "^4.1.2",
+        "clean-webpack-plugin": "^0.1.17",
+        "copy-webpack-plugin": "^4.2.0",
+        "exports-loader": "^0.6.4",
+        "file-loader": "^1.1.5",
+        "html-webpack-plugin": "^2.30.1",
         "istanbul-instrumenter-loader": "^3.0.0",
         "karma": "^1.7.1",
         "karma-chai": "^0.1.0",
@@ -29,11 +36,15 @@
         "karma-webpack": "^2.0.6",
         "mocha": "^4.0.1",
         "phantomjs-prebuilt": "^2.1.16",
+        "raw-loader": "^0.5.1",
         "sinon": "^4.1.2",
+        "style-loader": "^0.19.0",
         "typescript": "^2.6.1",
-        "webpack": "^3.8.1"
+        "webpack": "^3.8.1",
+        "webpack-dev-server": "^2.9.4"
     },
     "dependencies": {
+        "bootstrap": "^3.3.7",
         "jquery": "^3.2.1"
     }
 }
