--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "clean-webpack-plugin": "^0.1.17",
         "copy-webpack-plugin": "^4.2.0",
         "exports-loader": "^0.6.4",
+        "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.5",
         "html-webpack-plugin": "^2.30.1",
         "istanbul-instrumenter-loader": "^3.0.0",
