--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     },
     "dependencies": {
         "bootstrap": "^3.3.7",
+        "es6-promise": "^4.1.1",
         "jquery": "^3.2.1"
     }
 }
